update: container hover effect | still no working footer, nav bars, go top, and hero section

--- a/future-cyber-threats/5g-and-beyond.html
+++ b/future-cyber-threats/5g-and-beyond.html
@@ -313,7 +313,7 @@
         <div class="space-y-4">
             <h2 class="text-xl font-semibold mb-4">How do these work?</h2>
             <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>radio-waves</title>
@@ -331,7 +331,7 @@
                         5G networks use virtual slices to segment traffic by application. Attackers can target misconfigured slices to gain unauthorized access. Poorly isolated slices can expose sensitive systems.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>monitor</title>
@@ -349,7 +349,7 @@
                         Billions of IoT devices connected via 5G often lack basic security. Attackers use default credentials or unpatched flaws to hijack these devices. Compromised devices can be turned into botnets.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>audio-description2</title>
@@ -401,31 +401,31 @@
         <div class="space-y-4">
           <h4 class="font-medium text-2xl text-[#E2C8F1]">How Can We Prepare?</h4>
         <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Implement Secure Network Slicing</h6>
                 <p class="text-gray-200">
                     Use strict isolation policies between network slices. Monitor slice behavior for anomalies. Ensure each slice has unique security controls.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Strengthen IoT Standards</h6>
                 <p class="text-gray-200">
                     Mandate secure boot, encrypted communication, and regular updates. Avoid using default passwords across devices. Certifications can promote safer products.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Deploy Edge Security Solutions</h6>
                 <p class="text-gray-200">
                     Protect data at the edge using encryption, access controls, and real-time monitoring. Harden devices physically and digitally. Prevent lateral movement between nodes.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Conduct Telecom Risk Assessments</h6>
                 <p class="text-gray-200">
                     Continuously evaluate 5G infrastructure for vulnerabilities. Work with regulators and partners to maintain resilience. Incident response plans should be well-tested.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Raise Consumer Awareness</h6>
                 <p class="text-gray-200">
                     Educate users on securing personal IoT devices. Encourage firmware updates and use of network firewalls. Awareness reduces exploitable endpoints.
