--- a/future-cyber-threats/ai-in-hacking.html
+++ b/future-cyber-threats/ai-in-hacking.html
@@ -313,7 +313,7 @@
         <div class="space-y-4">
             <h2 class="text-xl font-semibold mb-4">How do these work?</h2>
             <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1">
                             <title>ai</title>
@@ -330,7 +330,7 @@
                     </p>
                 </div>
 
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg"  class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" version="1.1">
                             <title>capacity</title>
@@ -347,7 +347,7 @@
                     </p>
                 </div>
 
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>anomaly-found</title>
@@ -398,23 +398,23 @@
           <h4 class="font-medium text-2xl text-[#E2C8F1]">How Can We Prepare?</h4>
 
         <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Implement AI Threat Detection Tools</h6>
                 <p class="text-gray-200">Deploy advanced security systems that use AI to detect malicious behavior patterns. These tools can identify anomalies more quickly than traditional methods. Regular updates are essential to maintain effectiveness.</p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Train Employees on AI-Generated Phishing</h6>
                 <p class="text-gray-200">Educate staff on recognizing highly personalized phishing attempts. Include simulated attacks in training sessions. Awareness is a key defense against AI-powered social engineering.</p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Secure Machine Learning Pipelines</h6>
                 <p class="text-gray-200">Protect the data, training processes, and model deployment stages. This includes input validation, version control, and access restrictions. Securing the entire pipeline reduces opportunities for exploitation.</p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Adopt Explainable AI (XAI)</h6>
                 <p class="text-gray-200">Incorporate transparency into AI models to understand how decisions are made. This helps detect unusual behavior caused by tampering. XAI also builds user trust in system integrity.</p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Collaborate on Threat Intelligence</h6>
                 <p class="text-gray-200">Participate in shared intelligence efforts with cybersecurity and AI research communities. These partnerships accelerate the discovery of new threats and defenses. Collaboration improves resilience across sectors.</p>
             </div>
