--- a/future-cyber-threats/decentralized-finance.html
+++ b/future-cyber-threats/decentralized-finance.html
@@ -314,7 +314,7 @@
         <div class="space-y-4">
             <h2 class="text-xl font-semibold mb-4">How do these work?</h2>
             <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>document</title>
@@ -330,7 +330,7 @@
                         Poorly written or unaudited code can have logic errors or loopholes. Hackers exploit these to manipulate token balances or drain liquidity pools. Once exploited, the damage is often irreversible.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>rename</title>
@@ -346,7 +346,7 @@
                         Oracles supply DeFi apps with real-world data, such as asset prices. If attackers control or influence an oracle, they can trick smart contracts into misbehaving. This can result in unfair trades or liquidation of collateral.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>quality-report</title>
@@ -394,31 +394,31 @@
         <div class="space-y-4">
           <h4 class="font-medium text-2xl text-[#E2C8F1]">How Can We Prepare?</h4>
         <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Perform Regular Smart Contract Audits</h6>
                 <p class="text-gray-200">
                     Independent experts should review contract code for vulnerabilities. Audits identify logic flaws and unsafe practices. This reduces the chance of exploitation.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Use Decentralized and Redundant Oracles</h6>
                 <p class="text-gray-200">
                     Rely on multiple data sources to prevent single-point failures. This helps guard against manipulation. Services like Chainlink provide verified, tamper-resistant data.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Implement Timelocks and Governance</h6>
                 <p class="text-gray-200">
                     Adding delay mechanisms allows intervention before major changes take effect. Community governance ensures greater transparency. This protects user assets.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Monitor Transactions in Real-Time</h6>
                 <p class="text-gray-200">
                     Use blockchain analytics tools to flag suspicious activity. Early detection can limit damage. Continuous monitoring boosts response times.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Educate Users on Risks</h6>
                 <p class="text-gray-200">
                     Provide training and alerts about phishing, rug pulls, and suspicious apps. Informed users make safer decisions. Public awareness is a critical defense.
