--- a/future-cyber-threats/smart-city.html
+++ b/future-cyber-threats/smart-city.html
@@ -315,7 +315,7 @@
         <div class="space-y-4">
             <h2 class="text-xl font-semibold mb-4">How do these work?</h2>
             <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>anomaly-found</title>
@@ -333,9 +333,9 @@
                         Many infrastructure components rely on Supervisory Control and Data Acquisition (SCADA) systems. These systems often run outdated or unpatched software. Attackers can take remote control to cause outages or damage equipment
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
-                        <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800"  viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>audio-description2</title>
                             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                 <g id="audio-description1" fill="currentColor" transform="translate(108.373333, 50.206299)">
@@ -351,7 +351,7 @@
                         Smart cities use sensors for weather, traffic, and pollution monitoring. If attackers feed false data, it can disrupt decision-making or trigger false alerts. This can paralyze operations or cause unsafe conditions.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>lock</title>
@@ -400,31 +400,31 @@
         <div class="space-y-4">
             <h4 class="font-medium text-2xl text-[#E2C8F1]">How Can We Prepare?</h4>
             <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                     <h6 class="font-medium text-lg">Audit Infrastructure Components</h6>
                     <p class="text-gray-200">
                         Review software and hardware for outdated protocols and vulnerabilities. Perform regular penetration tests. Secure configurations and segment networks.
                     </p>
                 </div>
-                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                     <h6 class="font-medium text-lg">Implement Incident Response Playbooks</h6>
                     <p class="text-gray-200">
                         Develop procedures for different types of cyberattacks. Simulate drills across agencies and vendors. Coordination improves response times.
                     </p>
                 </div>
-                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                     <h6 class="font-medium text-lg">Mandate Vendor Security Standards</h6>
                     <p class="text-gray-200">
                         Require vendors to follow strict security guidelines and regular audits. Ensure all third-party components meet compliance standards to reduce supply chain risks.
                     </p>
                 </div>
-                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                     <h6 class="font-medium text-lg">Use AI-Powered Threat Detection</h6>
                     <p class="text-gray-200">
                         Analyze patterns across connected systems to detect anomalies. Use predictive analytics to prevent cascading failures. AI speeds up response.
                     </p>
                 </div>
-                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+                <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                     <h6 class="font-medium text-lg">Engage Citizens in Resilience Planning</h6>
                     <p class="text-gray-200">
                         Educate the public on cyber risks and involve them in emergency planning. Community awareness and participation strengthen overall city resilience.
