--- a/future-cyber-threats/biohacking.html
+++ b/future-cyber-threats/biohacking.html
@@ -313,7 +313,7 @@
         <div class="space-y-4">
             <h2 class="text-xl font-semibold mb-4">How do these work?</h2>
             <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>radio-waves</title>
@@ -331,7 +331,7 @@
                         Pacemakers, insulin pumps, and neural implants often use Bluetooth or RF communication. Without strong encryption, these signals can be intercepted or altered. Attackers could disrupt functionality or extract sensitive health data.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>code</title>
@@ -349,7 +349,7 @@
                         Implants and wearables receive software updates for maintenance or upgrades. If the update process lacks authentication, attackers could install malicious firmware. This compromises device safety and patient trust.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>anomaly</title>
@@ -401,31 +401,31 @@
         <div class="space-y-4">
           <h4 class="font-medium text-2xl text-[#E2C8F1]">How Can We Prepare?</h4>
         <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Use Encrypted Communication Channels</h6>
                 <p class="text-gray-200">
                     All implant communications must use strong encryption. Authentication protocols should validate both the sender and receiver. Avoid default credentials or open ports.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Enforce Secure Firmware Updates</h6>
                 <p class="text-gray-200">
                     Only verified updates should be accepted by medical devices. Implement signing and validation processes. Update rollout should be monitored for anomalies.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Conduct Risk Assessments and Penetration Testing</h6>
                 <p class="text-gray-200">
                     Devices should undergo regular security audits by ethical hackers. Testing uncovers vulnerabilities before exploitation. Continuous evaluation is essential.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Educate Patients and Biohackers</h6>
                 <p class="text-gray-200">
                     Provide clear guidance on device risks, safety settings, and updates. Informed users are better protected. Encourage responsible use of biohacking technology.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Develop Regulatory Oversight</h6>
                 <p class="text-gray-200">
                     Enforce standards for implant cybersecurity through government or medical boards. Compliance must be mandatory for certification. Oversight ensures safer adoption.
