--- a/future-cyber-threats/quantum-computing-risks.html
+++ b/future-cyber-threats/quantum-computing-risks.html
@@ -313,7 +313,7 @@
         <div class="space-y-4">
             <h2 class="text-xl font-semibold mb-4">How do these work?</h2>
             <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>logic-diagram</title>
@@ -329,7 +329,7 @@
                         This quantum algorithm can factor large prime numbers exponentially faster than classical computers. It undermines the mathematical foundation of RSA encryption. Once operational, quantum computers could break widely used encryption in minutes.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>document</title>
@@ -345,7 +345,7 @@
                         Grover’s Algorithm accelerates brute-force key searches. While it does not break symmetric encryption outright, it reduces the effective key strength significantly. This requires longer keys and updated algorithms to maintain security.
                     </p>
                 </div>
-                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4">
+                <div class="bg-[#141528] border border-indigo-900 rounded p-4 space-y-4 hover:bg-[#1D1F3E] ease duration-300">
                     <div class="flex justify-center">
                         <svg fill="currentColor" class="size-22 bg-purple-800/20 rounded-full p-4 text-purple-800" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M298.666667,3.55271368e-14 L298.666667,426.666667 L4.26325641e-14,426.666667 L4.26325641e-14,3.55271368e-14 L298.666667,3.55271368e-14 Z M258.133333,213.333333 L44.8,213.333333 L44.8,384 L258.133333,384 L258.133333,213.333333 Z M170.666667,256 L170.666667,298.666667 L128,298.666667 L128,256 L170.666667,256 Z M256,128 L42.6666667,128 L42.6666667,170.666667 L256,170.666667 L256,128 Z M256,42.6666667 L42.6666667,42.6666667 L42.6666667,85.3333333 L256,85.3333333 L256,42.6666667 Z" transform="translate(106.667 42.667)" />
@@ -369,19 +369,19 @@
         <div class="space-y-4">
             <div class="space-y-2">
                 <h5 class="text-xl">Financial Institutions</h5>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Banks and stock exchanges rely heavily on public key infrastructure. A quantum-enabled breach could allow unauthorized transactions or tampering with digital signatures. The consequences include fraud, financial loss, and trust erosion.
                 </p>
             </div>
             <div class="space-y-2">
                 <h5 class="text-xl">Government and Defense</h5>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Encrypted diplomatic and military communications are high-value targets. Compromise of these systems could impact national security. Preparing for quantum resilience is a top priority.
                 </p>
             </div>
             <div class="space-y-2">
                 <h5 class="text-xl">Cloud Service Providers</h5>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Many cloud services manage encrypted data for clients across industries. If quantum computers break traditional encryption, cloud-stored data could be exposed en masse. Providers must adopt quantum-safe standards to protect client data.
                 </p>
             </div>
@@ -391,33 +391,33 @@
         <div class="space-y-4">
           <h4 class="font-medium text-2xl text-[#E2C8F1]">How Can We Prepare?</h4>
         <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Transition to Post-Quantum Cryptography</h6>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Adopt NIST-recommended quantum-resistant algorithms. These are designed to withstand both classical and quantum attacks. Migration should start as early as possible.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Conduct Cryptographic Audits</h6>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Review all systems using public key encryption. Identify vulnerabilities and prioritize upgrades. This helps manage transition risks effectively.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Use Hybrid Cryptography</h6>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Combine classical and post-quantum algorithms during the transition. This approach balances security with compatibility. It allows gradual adoption without sacrificing protection.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Secure Long-Term Data Storage</h6>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Encrypt sensitive archives using quantum-resistant methods. Consider the future exposure of today's confidential data. Safeguard high-value assets immediately.
                 </p>
             </div>
-            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded">
+            <div class="space-y-2 p-4 bg-[#141528] border border-indigo-900 rounded hover:bg-[#1D1F3E] ease duration-300">
                 <h6 class="font-medium text-lg">Collaborate on Quantum Research</h6>
-                <p class="text-gray-200">
+                <p class="text-gray-200 text-justify">
                     Join industry and academic initiatives focused on quantum-safe technologies. Staying informed ensures faster adaptation. Sharing threat intelligence strengthens collective security.
                 </p>
             </div>
