update: font size and color, max width

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>ThreatScope</title>
+		<title>Innovation Gallery</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="assets/css/fonts.css">
         <style>
@@ -357,10 +357,10 @@
                 </div>
                 <!-- END OF SIDE BAR -->
             </nav>
-            <div class="max-w-7xl md:px-2 px-4 mx-auto mt-24">
+            <div class="max-w-5xl md:px-2 px-4 mx-auto mt-24">
                 <div class="text-center space-y-2">
-                    <h2 class="md:text-6xl text-4xl font-bold">Showcasing Innovation in Cybersecurity and News Media</h2>
-                    <p class="md:text-3xl text-xl text-gray-300">Explore our gallery of student-led projects — from an interactive cybersecurity learning platform to a dynamic news website. Built with passion, purpose, and code.</p>
+                    <h2 class="md:text-6xl text-4xl font-bold text-purple-300">Showcasing Innovation in Cybersecurity and News Media</h2>
+                    <p class="md:text-2xl text-l text-gray-300">Explore our gallery of student-led projects — from an interactive cybersecurity learning platform to a dynamic news website. Built with passion, purpose, and code.</p>
                 </div>
             </div>
             <div class="w-full overflow-hidden whitespace-nowrap relative md:px-0 px-4 mt-24">
